--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: "units-test"
+name: "tests"
 on:
   pull_request:
   push:
@@ -7,19 +7,26 @@ on:
       - 'releases/*'
 
 jobs:
-  # unit tests
-  units:
+  unit-tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Use Node.js 16.x
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16.x
+        cache: 'npm'
+        cache-dependency-path: package-lock.json
     - run: npm ci
+    - run: npm run build
     - run: npm test
 
-  # test action works running from the graph
-  test:
+  live-tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: ./
       with:
-        milliseconds: 1000
+        command: 'pylint' # Use pylint to lint Python files
+        flags: '--disable=missing-docstring' # Disable missing-docstring check
+        regex: '.*\.py' # Regex for Python files to scan
