--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
-  "name": "javascript-action",
+  "name": "smart-lint",
   "version": "1.0.0",
   "description": "JavaScript Action Template",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
+    "build": "tsc",
     "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
     "test": "jest",
     "all": "npm run lint && npm run prepare && npm run test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/actions/smart-lint.git"
   },
   "keywords": [
     "GitHub",
     "Actions",
-    "JavaScript"
+    "TypeScript"
   ],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/actions/smart-lint/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/actions/smart-lint#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "sodium": "^3.0.2"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "@vercel/ncc": "^0.31.1",
-    "eslint": "^8.0.0",
-    "jest": "^27.2.5"
+    "eslint": "^8.31.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4"
   }
 }
