--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "^5.47.1",
     "@vercel/ncc": "^0.31.1",
     "eslint": "^8.31.0",
+    "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   }
