--- a/action.yml
+++ b/action.yml
@@ -1,22 +1,18 @@
-name: 'SmartLint'
+name: 'SmartDiff'
 author: 'Kamil Rybacki'
-description: 'SmartLint is a GitHub Action that runs a linter command on the files that have changed between commits and any other files previously unchecked.'
+description: 'Finds files that have changed since last code SUCCESFUL workflow.'
 inputs:
-  command:
-    description: 'The command to run to lint the files e.g. pylint for Python files.'
+  include:
+    description: 'Regex to use to match the files to include.'
     required: true
-  flags:
-    description: 'Flags to pass to the linter command.'
-    required: false
-  regex:
-    description: 'Regex to use to match the files to lint.'
-    required: true
-  ignore:
+  exclude:
     description: 'Regex to use to match the files to ignore.'
     required: false
 outputs:
-  linter-log:
-    description: 'Output of the linter ran as a part of this action.'
+  diff-log:
+    description: 'Output of the Github diff command.'
+  changed-files:
+    description: 'List of changed files kept as GH Workflow output for convenience.'
 runs:
   using: 'node16'
   main: 'dist/index.js'
