--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
       "lib": ["esnext"],
       "types": ["node"],
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "index.ts"],
     "exclude": ["src/**/*.spec.ts"]
 }
