--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
 
   live-tests:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 16.x
@@ -34,4 +36,4 @@ jobs:
     - run: npm run build
     - uses: ./
       with:
-        regex: '.*\.py' # Regex for Python files to scan
+        include: '.*\.py' # Regex for Python files to scan
