--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@actions/artifact": "^1.1.1",
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "concat-typed-array": "^2.1.0",
+    "libsodium-wrappers": "^0.7.10",
     "sodium": "^3.0.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
+    "@types/libsodium-wrappers": "^0.7.10",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
