--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "JavaScript Action Template",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint .",
     "build": "tsc",
