--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-      "target": "es2019",
-      "module": "commonjs",
+      "target": "es6",
+      "module": "es6",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
