--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,13 @@ jobs:
         node-version: 16.x
         cache: 'npm'
         cache-dependency-path: package-lock.json
-    - run: npm ci
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.npm
+        key: npm-${{ hashFiles('package-lock.json') }}
+        restore-keys: npm-
+    - run: npm ci --ignore-scripts
     - run: npm test
 
   live-tests:
@@ -32,7 +38,13 @@ jobs:
         node-version: 16.x
         cache: 'npm'
         cache-dependency-path: package-lock.json
-    - run: npm ci
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.npm
+        key: npm-${{ hashFiles('package-lock.json') }}
+        restore-keys: npm-
+    - run: npm ci --ignore-scripts
     - run: npm run build
     - uses: ./
       with:
