--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "@vercel/ncc": "^0.36.0",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.31.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
