--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
       - 'releases/*'
 
 concurrency:
-  group: ${{ github.head_ref }}
+  group: ${{ github.head_ref }}-unit-tests
   cancel-in-progress: true
 
 jobs:
