--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -10,7 +10,7 @@ on:
     - cron: '24 5 * * 6'
 
 concurrency:
-  group: ${{ github.head_ref }}
+  group: ${{ github.head_ref }}-codeql
   cancel-in-progress: true
 
 jobs:
