--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-jest": "^29.3.1",
     "eslint": "^8.31.0",
     "jest": "^29.3.1",
+    "regenerator-runtime": "^0.13.11",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
