--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "sodium": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
+    "@babel/runtime": "^7.20.7",
     "@jest/globals": "^29.3.1",
     "@types/babel__preset-env": "^7.9.2",
     "@types/libsodium-wrappers": "^0.7.10",
