--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "concat-typed-array": "^2.1.0",
+    "libsodium": "^0.7.10",
     "libsodium-wrappers": "^0.7.10",
     "sodium": "^3.0.2"
   },
