--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "concat-typed-array": "^2.1.0",
-    "libsodium": "^0.7.10",
-    "libsodium-wrappers": "^0.7.10",
+    "simple-crypto-js": "^3.0.1",
     "sodium": "^3.0.2"
   },
   "devDependencies": {
@@ -41,7 +40,6 @@
     "@babel/runtime": "^7.20.7",
     "@jest/globals": "^29.3.1",
     "@types/babel__preset-env": "^7.9.2",
-    "@types/libsodium-wrappers": "^0.7.5",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
