--- a/babel.config.json
+++ b/babel.config.json
@@ -1,8 +1,9 @@
 {
-    "presets": [
-        "@babel/preset-env"
-    ],
+    "presets": ["@babel/typescript"],
     "plugins": [
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread",
         "@babel/plugin-transform-runtime"
-    ]
+    ],
+    "ignore": ["node_modules"]
 }
