--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ concurrency:
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.SMART_DIFF_TOKEN }}
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 16.x
@@ -30,6 +32,7 @@ jobs:
 
   live-tests:
     runs-on: ubuntu-latest
+    needs: unit-tests
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 16.x
