--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@actions/artifact": "^1.1.1",
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "@babel/preset-typescript": "^7.18.6",
     "concat-typed-array": "^2.1.0",
     "simple-crypto-js": "^3.0.1",
     "sodium": "^3.0.2"
