--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,35 @@ concurrency:
 jobs:
   lint-markdown:
     runs-on: ubuntu-latest
+    env:
+      MARKDOWN_FILES: $(find . -type f -name '*.md' -not -path './node_modules/*' -not -path './.github/*')
     steps:
     - uses: actions/checkout@v3
+    - name: Lint changelog file
+      uses: avto-dev/markdown-lint@v1
+      with:
+        args: ${{ env.MARKDOWN_FILES }}
 
   lint-source:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Use Node.js 16.x
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16.x
+        cache: 'npm'
+        cache-dependency-path: package-lock.json
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.npm
+        key: npm-${{ hashFiles('package-lock.json') }}
+        restore-keys: npm-
+    - name: Run ESLint
+      run: |
+        npm ci --ignore-scripts
+        npm run lint
 
   unit-tests:
     runs-on: ubuntu-latest
