--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,11 +11,11 @@ concurrency:
 jobs:
   lint-markdown:
     runs-on: ubuntu-latest
-    env:
-      MARKDOWN_FILES: $(find . -name '*.md' -not -path './node_modules/*' -not -path './.github/*')
     steps:
     - uses: actions/checkout@v3
-    - name: Lint changelog file
+    - name: Find Markdown files
+      run: echo "MARKDOWN_FILES=$(find . -name '*.md' -not -path './node_modules/*' -not -path './.github/*')" >> $GITHUB_ENV
+    - name: Lint Markdown files
       uses: avto-dev/markdown-lint@v1
       with:
         args: ${{ env.MARKDOWN_FILES }}
