pipming out the ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,49 +1,18 @@
 name: "tests"
 
 on:
-  pull_request:
-  push:
+  workflow_run:
+    workflows: ["Code Analysis"]
+    types:
+      - completed
 
 concurrency:
   group: ${{ github.head_ref }}-tests
   cancel-in-progress: true
 
 jobs:
-  lint-markdown:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Find Markdown files
-      run: echo "MARKDOWN_FILES=$(find . -name '*.md' -not -path './node_modules/*' -not -path './.github/*')" >> $GITHUB_ENV
-    - name: Lint Markdown files
-      uses: avto-dev/markdown-lint@v1
-      with:
-        args: ${{ env.MARKDOWN_FILES }}
-
-  lint-source:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js 16.x
-      uses: actions/setup-node@v2
-      with:
-        node-version: 16.x
-        cache: 'npm'
-        cache-dependency-path: package-lock.json
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.npm
-        key: npm-${{ hashFiles('package-lock.json') }}
-        restore-keys: npm-
-    - name: Run ESLint
-      run: |
-        npm ci --ignore-scripts
-        npm run lint
-
   unit-tests:
     runs-on: ubuntu-latest
-    needs: [lint-markdown, lint-source]
     env:
       GITHUB_TOKEN: ${{ secrets.SMART_DIFF_TOKEN }}
     steps:
