--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -11,6 +11,16 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  stop-tests:
+    name: 'Cancel Previous Runs'
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    steps:
+      - uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          workflow_id: 'Functionality tests'
+          access_token: ${{ secrets.SMART_DIFF_TOKEN }}
+
   lint-markdown:
     runs-on: ubuntu-latest
     steps:
