--- a/.github/workflows/test-functionality.yml
+++ b/.github/workflows/test-functionality.yml
@@ -32,7 +32,7 @@ jobs:
 
   gray-box:
     runs-on: ubuntu-latest
-    needs: jest
+    # needs: jest
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 16.x
