set envs differently

--- a/.github/workflows/test-functionality.yml
+++ b/.github/workflows/test-functionality.yml
@@ -11,9 +11,6 @@ concurrency:
 jobs:
   jest:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.SMART_DIFF_TOKEN }}
-      ACTIONS_RUNTIME_URL: ${ACTIONS_RUNTIME_URL}
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 16.x
@@ -29,6 +26,10 @@ jobs:
         key: npm-${{ hashFiles('package-lock.json') }}
         restore-keys: npm-
     - run: npm ci --ignore-scripts
+    - name: Manually pass Actions envs
+      run:
+        echo "GITHUB_TOKEN=${{ secrets.SMART_DIFF_TOKEN }}" >> $GITHUB_ENV
+        echo "ACTIONS_RUNTIME_URL=${ACTIONS_RUNTIME_URL}" >> $GITHUB_ENV
     - run: npm test
 
   gray-box-tests:
