try new babel config

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,6 +1,7 @@
 {
-    "presets": ["@babel/typescript"],
+    "presets": ["@babel/typescript", "env"],
     "plugins": [
-        "@babel/plugin-transform-runtime"
+        "@babel/plugin-transform-runtime",
+        "transform-class-properties"
     ]
 }
