--- a/.github/workflows/test-functionality.yml
+++ b/.github/workflows/test-functionality.yml
@@ -27,7 +27,7 @@ jobs:
         restore-keys: npm-
     - run: npm ci --ignore-scripts
     - name: Run Jest
-      uses: stefanoeb/jest-action@1.0.3
+      run: npm run test
 
   gray-box-tests:
     runs-on: ubuntu-latest
