--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,5 @@
 {
-    "presets": ["@babel/typescript", "env"],
+    "presets": ["@babel/typescript", "@babel/preset-env"],
     "plugins": [
         "@babel/plugin-transform-runtime"
     ]
