--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@actions/github": "^5.1.1",
     "@babel/preset-typescript": "^7.18.6",
     "concat-typed-array": "^2.1.0",
+    "jest-cli": "^29.3.1",
     "simple-crypto-js": "^3.0.1",
     "sodium": "^3.0.2"
   },
@@ -41,6 +42,7 @@
     "@babel/runtime": "^7.20.7",
     "@jest/globals": "^29.3.1",
     "@types/babel__preset-env": "^7.9.2",
+    "@types/jest-cli": "^24.3.0",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
