--- a/.github/workflows/test-functionality.yml
+++ b/.github/workflows/test-functionality.yml
@@ -29,7 +29,7 @@ jobs:
     - uses: actions/github-script@v6
       with:
         script: |
-          import { runCLI } from '@jest-cli';
+          const runCLI = require('@jest-cli');
           const testsResult = await runCLI(
             {
               preset: 'ts-jest',
