--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "concat-typed-array": "^2.1.0",
     "jest-cli": "^29.3.1",
+    "lz-string": "^1.4.4",
     "simple-crypto-js": "^3.0.1",
     "sodium": "^3.0.2"
   },
@@ -43,6 +44,7 @@
     "@jest/globals": "^29.3.1",
     "@types/babel__preset-env": "^7.9.2",
     "@types/jest-cli": "^24.3.0",
+    "@types/lz-string": "^1.3.34",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
