--- a/action.yml
+++ b/action.yml
@@ -12,10 +12,25 @@ inputs:
     description: 'Regex to use to match the files to ignore.'
     required: false
 outputs:
-  diff-log:
-    description: 'Output of the Github diff command.'
-  changed-files:
+  files:
     description: 'List of changed files kept as GH Workflow output for convenience.'
+    value: ${{ steps.find-files.outputs.files }}
 runs:
-  using: 'node16'
-  main: 'dist/index.js'
+  using: 'composite'
+  steps:
+    - name: Download an artifact containing files cached from previous runs
+      uses: actions/download-artifact@v2
+      with:
+        name: ${{ inputs.include }}-${{ inputs.exclude }}
+        path: ${{ inputs.include }}-${{ inputs.exclude }}
+    - name: Find files using SimpleCache
+      id: find-files
+      run:
+        node ./dist/index.js ${{ inputs.include }} ${{ inputs.exclude }} ${{ inputs.token }}
+      shell: bash
+    - name: Upload an artifact containing files cached from previous runs
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{ inputs.include }}-${{ inputs.exclude }}
+        path: ${{ inputs.include }}-${{ inputs.exclude }}
+        retention-days: 30
