--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/actions/smart-diff#readme",
   "dependencies": {
     "@actions/artifact": "^1.1.1",
+    "@actions/cache": "^3.1.2",
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "@babel/preset-typescript": "^7.18.6",
