--- a/.github/workflows/test-functionality.yml
+++ b/.github/workflows/test-functionality.yml
@@ -32,6 +32,6 @@ jobs:
     - uses: ./
       with:
         include: '.*\.ts'
-        tag: 'test-ts'
+        tag: 'test_ts'
         token: ${{ secrets.SMART_DIFF_TOKEN }}
         cache: ${{ secrets.SMART_DIFF_CACHE }}
