--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "concat-typed-array": "^2.1.0",
     "jest-cli": "^29.3.1",
-    "js-nacl": "^1.4.0",
+    "libsodium-wrappers": "^0.7.10",
     "lz-string": "^1.4.4",
     "simple-crypto-js": "^3.0.1",
     "sodium": "^3.0.2"
