--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/babel__preset-env": "^7.9.2",
     "@types/jest-cli": "^24.3.0",
     "@types/js-nacl": "^1.3.1",
+    "@types/libsodium-wrappers": "^0.7.10",
     "@types/lz-string": "^1.3.34",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
