--- a/.github/workflows/test-functionality.yml
+++ b/.github/workflows/test-functionality.yml
@@ -10,7 +10,6 @@ concurrency:
 
 jobs:
   gray-box-tests:
-    permissions: write-all
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -34,5 +33,5 @@ jobs:
       with:
         include: '.*\.ts'
         tag: 'test_ts'
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.DIFF_CACHE_TOKEN }}
         cache: ${{ secrets.DIFF_CACHE }}
