--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-diff",
+  "name": "diff-cache",
   "version": "1.0.0",
   "description": "JavaScript Action Template",
   "main": "index.js",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/smart-diff.git"
+    "url": "git+https://github.com/actions/diff-cache.git"
   },
   "keywords": [
     "GitHub",
@@ -23,9 +23,9 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/smart-diff/issues"
+    "url": "https://github.com/actions/diff-cache/issues"
   },
-  "homepage": "https://github.com/actions/smart-diff#readme",
+  "homepage": "https://github.com/actions/diff-cache#readme",
   "dependencies": {
     "@actions/artifact": "^1.1.1",
     "@actions/cache": "^3.1.2",
