--- a/.github/workflows/test-functionality.yml
+++ b/.github/workflows/test-functionality.yml
@@ -32,6 +32,5 @@ jobs:
     - uses: ./
       with:
         include: '.*\.ts'
-        tag: 'test_ts'
+        name: DIFF_CACHE
         token: ${{ secrets.DIFF_CACHE_TOKEN }}
-        cache: ${{ secrets.DIFF_CACHE }}
