--- a/.github/workflows/test-functionality.yml
+++ b/.github/workflows/test-functionality.yml
@@ -32,5 +32,5 @@ jobs:
     - uses: ./
       with:
         include: '.*\.ts'
-        name: DIFF_CACHE
+        cache: ${{ secrets.DIFF_CACHE }}
         token: ${{ secrets.DIFF_CACHE_TOKEN }}
