--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest-cli": "^29.3.1",
     "libsodium-wrappers": "^0.7.10",
     "lz-string": "^1.4.4",
+    "node-fetch": "^3.3.0",
     "simple-crypto-js": "^3.0.1",
     "sodium": "^3.0.2"
   },
