--- a/.github/workflows/test-functionality.yml
+++ b/.github/workflows/test-functionality.yml
@@ -8,7 +8,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  gray-box-tests:
+  unit-tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -28,35 +28,8 @@ jobs:
         restore-keys: npm-
     - run: npm ci --ignore-scripts
     - run: npm run build
-    - name: Generate test filenames list
-      run: |
-        filenames=""
-        for i in {1..10}; do
-          filename=$(date +%s)-$i.mock
-          filenames+="$filename "
-        done
-        echo "FILENAMES=$filenames" >> $GITHUB_ENV
-    - name: Create Python files
-      run: |
-        mkdir -p $GITHUB_WORKSPACE/mock
-        cd $GITHUB_WORKSPACE/mock
-        for filename in $FILENAMES; do
-          echo "print('Hello, World!')" > $filename
-        done
-    - uses: ./
-      with:
-        include: '.*\.mock'
-        cache_secret: ${{ secrets.DIFF_CACHE }}
-        token: ${{ secrets.DIFF_CACHE_TOKEN }}
-    - name: Compare values saved in secrets.DIFF_CACHE with list of filenames
-      env:
-        DIFF_CACHE: ${{ secrets.DIFF_CACHE }}
-        FILENAMES: ${{ env.FILENAMES }}
-      run: |
-        CACHED_FILES=$(echo "$DIFF_CACHE" | jq -r '.".*\.mock&&"')
-        echo "Files cached in secrets: $CACHED_FILES"
-        echo "Filenames generated for tests: $FILENAMES"
-        if [ "$CACHED_FILES" != "$FILENAMES" ]; then
-          echo "Values saved in secrets.DIFF_CACHE and list of filenames are different!"
-          exit 1
-        fi
+    - name: Setup token for tests
+      run:
+        echo "TESTS_TOKEN=$(echo ${{ secrets.DIFF_CACHE_TOKEN }})" >> $GITHUB_ENV
+    - name: Run tests
+      run: npm run test
