Add caching mechanism (#9)
* test

* moduel resolution

* adding suffixes

* fix jest config

* add ts-node

* add encrytpion test

* make Cache a singleton

* add npm caching

* fix jest config

* adding babel jest

* revert

* add config for babel

* make jest config into TS

* change babel config to json

* add @babel/preset-env

* adding concurrency

* separatedi nto groups

* add regenerator runtime for async tests

* move import to tests file

* try other config

* move improt again

* add babel plugin

* actually install sodium

* fix sodium import

* change to sumo

* fix import

* packages cleanup

* revert from sumo

* change on

* manually put libsodium

* ditch libsodium

* explicitly pass token to SimpelCache

* smart diff token

* pass token to init

* modiffy babel config

* add dependency on utests

* better error

* get token from env

* remove ignore

* remove unused and install used pkgs

* remove copies??

* merge lint and tests

* hoist tests outside of async

* fix expects

* rename tests file

* change SimpleCrypto init place

* cast to string

* bad import ?

* cleanup

* enable linting

* fix find

* correctly set envvar

* pipming out the ci

* removinf workflow_run

* add tests for cachign mechanisms

* change tests organization

* set token for action

* changed logging

* dont set ACTIONS_URL

* print envs

* debug

* check if it is a problem with jest

* satisfy imports

* test

* try to set env

* set envs differently

* fix env passthrough

* use gh action for jest

* try new babel config

* config change

* ass jest-cli to ignore transform

* revert jest action

* change babel

* add preset env

* run jest programatically to set up internal envs

* run jest programatically

* import => require

* typo

* destructure import

* jest-cli => jest/core

* just give up with Jest



--- a/action.yml
+++ b/action.yml
@@ -1,17 +1,21 @@
 name: 'SmartDiff'
 author: 'Kamil Rybacki'
-description: 'Finds files that have changed since last code SUCCESFUL workflow.'
+description: 'Finds files that have changed since last code SUCCESSFUL workflow.'
 inputs:
   include:
     description: 'Regex to use to match the files to include.'
+    required: true
+  cache_secret:
+    description: 'Secret containing the cache.'
+    required: true
+  token:
+    description: 'Github token to use for the API calls.'
     required: true
   exclude:
     description: 'Regex to use to match the files to ignore.'
     required: false
 outputs:
-  diff-log:
-    description: 'Output of the Github diff command.'
-  changed-files:
+  files:
     description: 'List of changed files kept as GH Workflow output for convenience.'
 runs:
   using: 'node16'
