--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -1,17 +1,13 @@
 # `dist/index.js` is a special file in Actions.
 # When you reference an action with `uses:` in a workflow,
-# `index.js` is the code that will run.
-# For our project, we generate this file through a build process from other source files.
-# We need to make sure the checked-in `index.js` actually matches what we expect it to be.
 name: Check dist
+
+concurrency:
+  group: ${{ github.head_ref }}-dist-check
+  cancel-in-progress: true
 
 on:
   push:
-    branches:
-      - main
-    paths-ignore:
-      - '**.md'
-  pull_request:
     paths-ignore:
       - '**.md'
   workflow_dispatch:
@@ -19,21 +15,16 @@ on:
 jobs:
   check-dist:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-
       - name: Set Node.js 16.x
         uses: actions/setup-node@v3.6.0
         with:
           node-version: 16.x
-
       - name: Install dependencies
         run: npm ci
-
       - name: Rebuild the dist/ directory
         run: npm run prepare
-
       - name: Compare the expected and actual dist/ directories
         run: |
           if [ "$(git diff --ignore-space-at-eol dist/ | wc -l)" -gt "0" ]; then
@@ -42,7 +33,6 @@ jobs:
             exit 1
           fi
         id: diff
-
       - uses: actions/upload-artifact@v3
         if: ${{ failure() && steps.diff.conclusion == 'failure' }}
         with:
