--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-      "target": "es2019",
-      "module": "commonjs",
+      "target": "es6",
+      "module": "es6",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
@@ -9,6 +9,7 @@
       "outDir": "dist",
       "lib": ["esnext"],
       "types": ["node"],
+      "moduleResolution":"node",
     },
     "include": ["src/**/*.ts", "index.ts"],
     "exclude": ["src/**/*.spec.ts"]
