--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -28,6 +28,8 @@ jobs:
       run: echo "MARKDOWN_FILES=$(find . -name '*.md' -not -path './node_modules/*' -not -path './.github/*')" >> $GITHUB_ENV
     - name: Lint Markdown files
       uses: avto-dev/markdown-lint@v1
+      env:
+        INPUT_CONFIG: markdown-lint.yml
       with:
         args: ${{ env.MARKDOWN_FILES }}
 
