--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -26,12 +26,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Find Markdown files
       run: echo "MARKDOWN_FILES=$(find . -name '*.md' -not -path './node_modules/*' -not -path './.github/*')" >> $GITHUB_ENV
-    - name: Set config for Markdown Lint
-      run: echo "INPUT_CONFIG=/markdown-lint.yml" >> $GITHUB_ENV
     - name: Lint Markdown files
       uses: avto-dev/markdown-lint@v1
       with:
         args: ${{ env.MARKDOWN_FILES }}
+        config: '/markdown-lint.yml'
 
   lint-source:
     runs-on: ubuntu-latest
