--- a/markdown-lint.yml
+++ b/markdown-lint.yml
@@ -1,20 +1,20 @@
-# MD013/line-length - Line length
+###############
+# Rules by id #
+###############
+MD004: false                  # Unordered list style
+MD007:
+  indent: 2                   # Unordered list indentation
 MD013:
-  # Number of characters
-  line_length: 250
-  # Number of characters for headings
-  heading_line_length: 250
-  # Number of characters for code blocks
-  code_block_line_length: 250
-  # Include code blocks
-  code_blocks: true
-  # Include tables
-  tables: true
-  # Include headings
-  headings: true
-  # Include headings
-  headers: true
-  # Strict length checking
-  strict: false
-  # Stern length checking
-  stern: false
+  line_length: 400            # Line length 80 is far to short
+MD024: false                  # Allow multiple headings with same content
+MD026:
+  punctuation: ".,;:!。，；:"  # List of not allowed
+MD029: false                  # Ordered list item prefix
+MD033: false                  # Allow inline HTML
+MD036: false                  # Emphasis used instead of a heading
+MD040: false                  # Allow ``` blocks in md files with no language specified
+
+#################
+# Rules by tags #
+#################
+blank_lines: false  # Error on blank lines
