--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -30,7 +30,7 @@ jobs:
       uses: avto-dev/markdown-lint@v1
       with:
         args: ${{ env.MARKDOWN_FILES }}
-        config: ${{ env.GITHUB_WORKSPACE }}/.github/configs/.markdown-lint.yml
+        config: '${{ env.GITHUB_WORKSPACE }}/.github/configs/.markdown-lint.yml'
 
   lint-source:
     runs-on: ubuntu-latest
