--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -24,13 +24,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Find Markdown files
-      run: echo "MARKDOWN_FILES=$(find . -name '*.md' -not -path './node_modules/*' -not -path './.github/*' | tr '\n' ' ')" >> $GITHUB_ENV
-    - name: Lint Markdown files
-      uses: avto-dev/markdown-lint@v1
+    - name: Lint changelog file
+      uses: docker://avtodev/markdown-lint:v1
       with:
-        args: ${{ env.MARKDOWN_FILES }}
-        config: '${{ env.GITHUB_WORKSPACE }}/.github/configs/.markdown-lint.yml'
+        config: '/.github/configs/markdown-lint.yml'
+        args: './CHANGELOG.md ./README.md LICENSE'
 
   lint-source:
     runs-on: ubuntu-latest
