--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,10 +1,10 @@
-name: "Functionality tests"
+name: "Unit tests"
 
 on:
   push:
 
 concurrency:
-  group: ${{ github.head_ref }}-tests
+  group: ${{ github.head_ref }}-unit-tests
   cancel-in-progress: true
 
 jobs:
@@ -33,3 +33,17 @@ jobs:
         echo "TESTS_TOKEN=$(echo ${{ secrets.DIFF_CACHE_TOKEN }})" >> $GITHUB_ENV
     - name: Run tests
       run: npm run test
+    - name: Prepare cache for Action test
+      id: diff-cache
+      uses: ./
+      with:
+        include: '.*'
+        cache_secret: ${{ secrets.DIFF_CACHE }}
+        token: ${{ secrets.DIFF_CACHE_TOKEN }}
+    - name: Check if the action found any files
+      run: |
+        if [ -z "${{ steps.diff-cache.outputs.files }}" ]; then
+          echo "No files found"
+          exit 1
+        fi
+        echo "Files found: ${{ steps.diff-cache.outputs.files }}"
