--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -41,7 +41,7 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          import { run as pre } from './dist/pre.js';
+          const pre = require('./dist/pre.js');
           await pre();
     - name: Prepare cache for Action test
       id: diff-cache
@@ -64,5 +64,5 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
-          import { run as post } from './dist/post.js';
+          const post = require('./dist/post.js');
           await post();
