--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -56,9 +56,13 @@ jobs:
           exit 1
         fi
         echo "Files found: ${{ steps.diff-cache.outputs.files }}"
-    - name: Pass the cache manually throuh secret for debugging
+    - name: Pass the cache manually through secret for debugging
       run: |
         echo "CACHE_SECRET=${{ secrets.DIFF_CACHE }}" >> $GITHUB_ENV
+    - name: Pass the needed inputs as env vars
+      run: |
+        echo "TESTS_INCLUDE=.*" >> $GITHUB_ENV
+        echo "TESTS_EXCLUDE=''" >> $GITHUB_ENV
     - name: Manually run the post.js step
       uses: actions/github-script@v6
       with:
