remove lz strign install (its cached anyway)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -100,8 +100,7 @@ jobs:
         node-version: 16.x
         cache: 'npm'
         cache-dependency-path: package-lock.json
-    - name: Install "lz-string" library via NPM
-      run: npm install lz-string
+    - run: npm ci --ignore-scripts
     - name: Pass the cache to GitHub Envs
       run:
         echo "DIFF_CACHE=${{ secrets.DIFF_CACHE }}" >> $GITHUB_ENV
