--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint .",
     "build": "tsc",
-    "prepare": "ncc build pre.ts -o dist --source-map && ncc build index.ts -o dist --source-map --license licenses.txt && ncc build post.ts -o dist --source-map",
+    "prepare": "ncc build pre.ts -o dist/pre.js --source-map && ncc build index.ts -o dist/index.js --source-map --license licenses.txt && ncc build post.ts -o dist/post.js --source-map",
     "test": "jest",
     "all": "npm run lint && npm run prepare && npm run test"
   },
