--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "JavaScript Action Template",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "build": "tsc",
-    "prepare": "ncc build index.ts -o dist --source-map --license licenses.txt",
+    "build": "ncc build pre.ts -o dist/pre --source-map && ncc build index.ts -o dist/ --source-map --license licenses.txt && ncc build post.ts -o dist/post --source-map",
     "test": "jest",
-    "all": "npm run lint && npm run prepare && npm run test"
+    "all": "npm run lint && npm run build && npm run test"
   },
   "repository": {
     "type": "git",
