--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "build": "ncc build pre.ts -o dist/pre --source-map && ncc build index.ts -o dist/ --source-map --license licenses.txt && ncc build post.ts -o dist/post --source-map",
+    "build": "tsc --noEmit && ncc build pre.ts -o dist/pre --source-map && ncc build index.ts -o dist/ --source-map --license licenses.txt && ncc build post.ts -o dist/post --source-map",
     "test": "jest",
     "all": "npm run lint && npm run build && npm run test"
   },
