--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,10 @@ inputs:
   exclude:
     description: 'Regex to use to match the files to ignore. If left empty - no files will be ignored.'
     required: false
+  disable_escaping:
+    description: 'Set to true if You want to provide manually escaped regexps i.e. turn off manual escape of special characters.'
+    required: false
+    default: 'false'
 outputs:
   files:
     description: 'List of changed files kept as GH Workflow output for convenience.'
